Fixed regression: the DEL key no longer worked in the playlist after opening the File Browser context menu.

BUG: 140197

svn path=/trunk/extragear/multimedia/amarok/; revision=626089