src/mydiroperator.h
@@ -20,12 +20,14 @@ class MyDirOperator : public KDirOperator {
         //reimplemented due to a bug in KDirOperator::activatedMenu ( KDE 3.4.2 ) - See Bug #103305
         virtual void activatedMenu (const KFileItem *, const QPoint &pos) {
             updateSelectionDependentActions();
+            reenableDeleteKey();
             static_cast<KActionMenu*>(actionCollection()->action("popupMenu"))->popupMenu()->popup( pos );
         }
         void myHome();
         void myCdUp();
 
     private:
+        void reenableDeleteKey();
     Medium *m_medium;
 
 };
